# rust-rest-api-test

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
data/: app.db
migrations/2024_01_01_000000_create_departments/: up.sql
migrations/2024_01_02_000000_create_employees/: up.sql
scripts/: run_all.sh  test_api.sh
src/: config.rs  main.rs
src/application/: mod.rs
src/application/dto/: department_dto.rs  employee_dto.rs  mod.rs
src/application/services/: department_service.rs  employee_service.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: department.rs  employee.rs  mod.rs  schema.rs
src/infrastructure/: database.rs  errors.rs  mod.rs
src/infrastructure/repository/: department_repo.rs  in_memory_employee_repo.rs  mod.rs
src/presentation/: mod.rs  response.rs
src/presentation/handlers/: department_handler.rs  employee_handler.rs  mod.rs
src/presentation/routes/: employee_routes.rs  mod.rs
